--- a/src/html/level.html
+++ b/src/html/level.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style/style.css" />
     <title>LEVEL STARTED</title>
   </head>
-  <body>
+  <body style="margin: 0">
     <canvas id="levelCanvas"></canvas>
     <canvas id="drawCanvas"></canvas>
     <script>
@@ -18,23 +18,31 @@
     <script src="../js/level.js"></script>
     <script src="../js/drawCanvas.js"></script>
     <script>
-      function resizeCanvases() {
+      function resizeCanvas() {
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight / 2;
-        drawCanvas.width = window.innerWidth;
-        drawCanvas.height = window.innerHeight / 2;
+      }
+      function focusedBitOffsetChanged(offset) {
+        let bit = bits[offset];
+        console.log(bit.text[0]);
+        let size = canvasSize(bit.text[0]);
+        drawCanvas.width = size[0];
+        drawCanvas.height = size[1];
+      }
+      function canvasSize(c) {
+        return longCharacters.indexOf(c) > 0 ? [140, 80] : [90, 90];
       }
       window.onload = function () {
         const canvas = (globalThis.canvas =
           document.querySelector("#levelCanvas"));
         const drawCanvas = (globalThis.drawCanvas =
           document.querySelector("#drawCanvas"));
-        resizeCanvases();
+        resizeCanvas();
         let generator = new TextGenerator(alphabet);
         new DrawCanvas(drawCanvas).addClearButton().begin();
         levelStart(canvas, generator);
       };
-      window.onresize = resizeCanvases;
+      window.onresize = resizeCanvas;
     </script>
   </body>
 </html>
