Updated index.html and migrated configuration to assets folder

--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style/style.css" />
-    <title>TITLE HERE</title>
+    <title>Welcome! | JA LEARNER</title>
   </head>
   <body>
-    <h1>JA Learner</h1>
-    <a href="src/html/level.html">LEVEL START!</a>
+    <div class="container card text-center h-min-50" id="main-menu">
+      <h1 class="card-header">JA Learner</h1>
+      <div class="card-body">
+        <ul>
+          <li><a href="src/html/level.html" class="btn">LEVEL START!</a></li>
+        </ul>
+      </div>
+    </div>
+    <p class="d-note container mt-large">
+      There are a lot of configuration that you can modify! Checkout the file at
+      this path: <a href="assets/config.js"><code>assets/config.js</code></a>
+    </p>
   </body>
 </html>
