--- a/src/html/level.html
+++ b/src/html/level.html
@@ -26,7 +26,7 @@
       module = {};
     </script>
     <script src="../../vendor/pixelmatch-5.2.0.js"></script>
-    <script src="../js/config.js"></script>
+    <script src="../../assets/config.js"></script>
     <script src="../js/alphabet.js"></script>
     <script src="../../assets/images/hira/hira.js"></script>
     <script src="../../assets/images/kana/kana.js"></script>
